internal/operator/inventory/manifests/dpu-detector.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/part-of: dpu-detector
    dpu.nvidia.com/component: dpu-detector
  name: dpf-dpu-detector
spec:
  selector:
    matchLabels:
      app.kubernetes.io/part-of: dpu-detector
      dpu.nvidia.com/component: dpu-detector
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: dpu-detector
        dpu.nvidia.com/component: dpu-detector
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
              - key: node-role.kubernetes.io/master
                operator: DoesNotExist
      automountServiceAccountToken: false
      containers:
      - command:
        - /dpu-detector
        image: example.com/hostdriver:v0.1.0
        name: dpu-detector
        resources:
          limits:
            cpu: 300m
            memory: 300Mi
          requests:
            cpu: 100m
            memory: 50Mi
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /etc/kubernetes/node-feature-discovery/features.d/
          name: features-d
        - mountPath: /host-sys
          name: host-sys
          readOnly: true
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: kube-api-access
          readOnly: true
      hostNetwork: true
      securityContext:
        runAsUser: 0
      serviceAccountName: dpu-detector
      terminationGracePeriodSeconds: 10
      volumes:
      - hostPath:
          path: /etc/kubernetes/node-feature-discovery/features.d/
        name: features-d
      - hostPath:
          path: /sys
        name: host-sys
      - name: kube-api-access
        projected:
          defaultMode: 420
          sources:
          - serviceAccountToken:
              expirationSeconds: 3600
              path: token
          - configMap:
              items:
              - key: ca.crt
                path: ca.crt
              name: kube-root-ca.crt
          - downwardAPI:
              items:
              - fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.namespace
                path: namespace
  updateStrategy:
    type: RollingUpdate
