internal/operator/inventory/manifests/kamaji-cluster-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: manager
    app.kubernetes.io/part-of: kamaji-cluster-manager
    dpu.nvidia.com/component: kamaji-cluster-manager
  name: kamaji-cm-controller-manager
  namespace: dpf-operator-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/part-of: kamaji-cluster-manager
      dpu.nvidia.com/component: kamaji-cluster-manager
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        app.kubernetes.io/part-of: kamaji-cluster-manager
        dpu.nvidia.com/component: kamaji-cluster-manager
    spec:
      containers:
      - args:
        - --leader-elect
        command:
        - /kamaji-cluster-manager
        image: example.com/dpf-system:v0.1.0
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      securityContext:
        runAsNonRoot: true
      serviceAccountName: kamaji-cm-controller-manager
      terminationGracePeriodSeconds: 10
