internal/operator/inventory/manifests/vault-kms.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: dpf-vault-kms
  namespace: dpf-operator-system
  labels:
    app.kubernetes.io/part-of: dpf-vault-kms
    dpu.nvidia.com/component: vault-kms
spec:
  selector:
    matchLabels:
      app.kubernetes.io/part-of: dpf-vault-kms
      dpu.nvidia.com/component: vault-kms
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: dpf-vault-kms
        dpu.nvidia.com/component: vault-kms
    spec:
      automountServiceAccountToken: false
      serviceAccountName: dpf-kms-plugin
      priorityClassName: system-node-critical
      securityContext:
        runAsUser: 0
      containers:
      - name: vault-kms
        image: example.com/dpf-system:v0.1.0
        command:
        - /dpf-kms-plugin
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        readinessProbe:
          exec:
            command:
            - /dpf-kms-plugin
            - readyz
            - --socket-path=/var/lib/dpf/kmsplugin/vault-kms/kms.sock
          initialDelaySeconds: 10
          periodSeconds: 60
          timeoutSeconds: 30
          failureThreshold: 2
          successThreshold: 1
        volumeMounts:
        - name: kms-socket
          mountPath: /var/lib/dpf/kmsplugin/vault-kms
      volumes:
      - name: kms-socket
        hostPath:
          path: /var/lib/dpf/kmsplugin/vault-kms
          type: DirectoryOrCreate
