internal/operator/inventory/manifests/nodesriovdeviceplugin-controller.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: manager
    app.kubernetes.io/part-of: nodesriovdeviceplugin-controller
    dpu.nvidia.com/component: nodesriovdeviceplugin-controller
  name: dpf-nodesriovdeviceplugin-webhook-service
  namespace: dpf-nodesriovdeviceplugin-system
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/part-of: nodesriovdeviceplugin-controller
    dpu.nvidia.com/component: nodesriovdeviceplugin-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: manager
    app.kubernetes.io/part-of: nodesriovdeviceplugin-controller
    dpu.nvidia.com/component: nodesriovdeviceplugin-controller
  name: dpf-nodesriovdeviceplugin-controller
  namespace: dpf-nodesriovdeviceplugin-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/part-of: nodesriovdeviceplugin-controller
      dpu.nvidia.com/component: nodesriovdeviceplugin-controller
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        app.kubernetes.io/part-of: nodesriovdeviceplugin-controller
        dpu.nvidia.com/component: nodesriovdeviceplugin-controller
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/part-of: nodesriovdeviceplugin-controller
                  dpu.nvidia.com/component: nodesriovdeviceplugin-controller
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - command:
        - /nodesriovdeviceplugin-controller
        - --leader-elect
        image: example.com/dpf-system:v0.1.0
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        - containerPort: 8080
          name: metrics
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      serviceAccountName: dpf-nodesriovdeviceplugin-controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: nodesriovdeviceplugin-webhook-server-cert
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: dpf-nodesriovdeviceplugin-system/dpf-nodesriovdeviceplugin-serving-cert
  labels:
    app.kubernetes.io/component: manager
    app.kubernetes.io/part-of: nodesriovdeviceplugin-controller
    dpu.nvidia.com/component: nodesriovdeviceplugin-controller
  name: dpf-nodesriovdeviceplugin-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: dpf-nodesriovdeviceplugin-webhook-service
      namespace: dpf-nodesriovdeviceplugin-system
      path: /validate-noderesources-dpu-nvidia-com-v1alpha1-nodesriovdevicepluginconfig
  failurePolicy: Fail
  name: vnodesriovdevicepluginconfig.kb.io
  rules:
  - apiGroups:
    - noderesources.dpu.nvidia.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - nodesriovdevicepluginconfigs
  sideEffects: None
